--- a/main.html
+++ b/main.html
@@ -28,18 +28,4 @@
 
 </body>
 
-</html><header>
-			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About us</a></li>
-					<li><a href="#">Contact us</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main>
-			<h2>3 random images</h2>
-			<img src="https://picsum.photos/id/123/200/300" alt="image1">
-			<img src="https://picsum.photos/id/124/200/300" alt="image2">
-			<img src="https://picsum.photos/id/125/200/300" alt="image3">
-		</main>
+</html>
